# rtd

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.Jules/: bugtracker.md
.jules/: bugtracker.md
docs/: LARGE_DATA_RTD_PATTERN.md
examples/simple/: MyHybrid.def  README.md  main.cpp  server_impl.h  xll_definitions.h
include/rtd/: defs.h  entry.h  factory.h  registry.h  server.h
tests/: integration_test.cpp  repro_safearray.cpp  test_rtd_excel.ps1  unit_test.cpp
